# Moria

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/moria/: __init__.py  backend.py  definition.py  type.py
tests/: __init__.py  t1.py
workflows/: workflow.yml
