[project]
name = "Moria"
version = "0.1.0"
description = "Procedual Geometry Creation"
authors = [{ name = "whiting", email = "1712428442@qq.com" }]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.12.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
